--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -64,6 +64,10 @@
     @apply flex items-center justify-center;
   }
 
+  .circle {
+    @apply rounded-full;
+  }
+
   .page {
     @apply max-w-pageWidth mx-auto grid grid-cols-12 gap-x-5;
   }
